# config_networks

./: .gitignore  CITATION.cff  LICENSE  README.md  nn_from_config.py  pyproject.toml
example/: train_constant_map.py  use_custom_module.py  viz.py
net_configs/: double_split_cnn.json  double_split_cnn.txt  encoder_layer.json  flatten_unflatten.json  multimodal.json  multimodal.txt  multimodal_dict.txt  multimodal_dict_concat.txt  multimodal_dict_concat_some_keys.txt  resnet.json  resnet.txt  simple_cnn.json  simple_cnn.txt  small_split_cnn.json  small_split_cnn_output_dict.txt  small_split_recombine_cnn.json  split_cnn.json  split_cnn.txt  tuple_extraction.txt  tuple_multiple_extraction.txt  tuple_sum.txt  tuple_sum_specific_indices.txt
src/: config_networks.py  nn_from_config.py
test/: test_basic_components.py  test_networks.py
